--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Xcode
-#
 build/
 *.pbxuser
 !default.pbxuser
@@ -18,12 +16,6 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
 Pods/
 Podfile.lock
+.DS_Store
